--- a/Wednesday2/index.html
+++ b/Wednesday2/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <link rel = "stylesheet" href = "styles.css">
+        <script src = "script.js"></script>
     </head>
     <body>
         <div class = "card">
